--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -251,5 +251,6 @@ footer {
   background-color: $main-color;
   color: $background-color;
   text-align: center;
-  padding: 0.6667em 0;
+  padding: -2.3333em 0;
+  margin-top: 88px;
 }
