--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,15 @@
 ---
 layout: default
 ---
+<script>
+
+	#page { 
+		margin-bottom: -56px;
+		text-indent: -9999px;
+	}
+
+</script>
+
 <article id="page">
 	
   {{ content }}
